Modified Backspace Button

--- a/Calculator.kv
+++ b/Calculator.kv
@@ -125,7 +125,7 @@ MainWindow
             on_press: exit()
 
         Button:
-            text: "<"
+            text: "<<"
             background_color: 1,0,0,1
             font_size: 30
             on_press: root.backspace()
